--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -1,3 +1,6 @@
+\usepackage[acronyms]{glossaries}
+\makeglossaries
+
 \newglossaryentry{latex}
 {
     name=latex,
@@ -16,6 +19,10 @@
     description={A mathematical expression}
 }
 
-\newacronym{gcd}{GCD}{Greatest Common Divisor}
 
-\newacronym{lcm}{LCM}{Least Common Multiple}
+\newacronym{kegg}{KEGG}{Kyoto Encyclopedia of Genes and Genomes}
+\newacronym{kiba}{KIBA}{Kinase Inhibitor Bioactivity}
+\newacronym{pssm}{PSSM}{Position Specific Scoring Matrix}
+\newacronym{srv}{R2RSRV}{Residue Residue Statistical Residual Vector}
+\newacronym{lstm}{LSTM}{Long Short Term Memor}
+\newacronym{cnn}{CNN}{Convolutional Neural Network}
