--- a/configs.tex
+++ b/configs.tex
@@ -14,9 +14,7 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{color}
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
-\usepackage[acronym]{glossaries}
-\makeglossaries
-\input{bibliography/glossary.tex}
+
 % \usepackage [ Bjornstrup ]{ fncychap }
 % \usepackage{nomencl} % Nomenclature
 % \makenomenclature
@@ -37,7 +35,8 @@
     \addtocounter{page}{-1}%
     \newpage}
 
-
+% Glossary
+\input{bibliography/glossary.tex}
 %%%%%%%%%%%%%%%%% END OF PACKAGES
 
 
