--- a/tips.tex
+++ b/tips.tex
@@ -111,4 +111,7 @@ Rapport Français de Stage
 
 https://www.overleaf.com/latex/templates/graduation-project-cover-page/qtmbhjbwjqcd
 
-
+% Acronyms
+\acrshort{lcm}
+\acrlong{lcm}
+\acrfull{lcm}
