--- a/frontmatter/5-acknowledges.tex
+++ b/frontmatter/5-acknowledges.tex
@@ -1,6 +1,22 @@
 \chapter*{Acknowledgement}
 
-We think the life is quite amazing
+
+I would like to express the deepest appreciation to my supervisor and Head of Department of Electronics and Computer Engineering, Pulchowk Campus \myadvisorA for his guidance throughout the period of this work. His invaluable support, understanding and expertise have been very important in completing this work. It was a great honor for me to pursue my thesis under his supervision.
+
+I pay my sincere gratitude Dr. Aman Shakya, to MSCSKE Coordinator for his supervision and help during this research work.
+
+I am highly grateful to Prof. Dr. Shashidhar Ram Joshi, Prof. Dr. Subarna Shakya, Dr. Sanjeeb Prasad Pandey, Dr. Dibakar Raj Pant and Dr. Basanta Joshi for their encouragement and guidance.
+
+I would like to express my heartily gratitude towards the \myinstitute, \mycampus along with all my respected teachers, my friends, my family for giving me continuous support for their invaluable help.
+
+
+{\bf{\theauthor}}
+
+
+{\bf{\roll}}
+
+
+{\bf{\myinstitute}}
 
 
 %\renewcommand{\abstractname}{Remerciements}
