--- a/configs.tex
+++ b/configs.tex
@@ -54,8 +54,8 @@
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\fancyhead[LE,RO]{\textsl{\rightmark}}
-\fancyhead[LO,RE]{\textsl{\leftmark}}
+% \fancyhead[LE,RO]{\textsl{\rightmark}}
+% \fancyhead[LO,RE]{\textsl{\leftmark}}
 
 
 \renewcommand{\chaptermark}[1]{%
