--- a/bibliography/__latexindent_temp.tex
+++ b/bibliography/__latexindent_temp.tex
@@ -1,15 +1,19 @@
-@article{Jeong2011,
-abstract = {While genome sequencing projects have generated tremendous amounts of protein sequence data for a vast number of genomes, substantial portions of most genomes are still unannotated. Despite the success of experimental methods for identifying protein functions, they are often lab intensive and time consuming. Thus, it is only practical to use in silico methods for the genome-wide functional annotations. In this paper, we propose new features extracted from protein sequence only and machine learning-based methods for computational function prediction. These features are derived from a position-specific scoring matrix, which has shown great potential in other bininformatics problems. We evaluate these features using four different classifiers and yeast protein data. Our experimental results show that features derived from the position-specific scoring matrix are appropriate for automatic function annotation.},
-author = {Jeong, Jong Cheol and Lin, Xiaotong and Chen, Xue Wen},
-doi = {10.1109/TCBB.2010.93},
-file = {:Users/anupadkh/Downloads/jongcheoljeong2011.pdf:pdf},
-issn = {15455963},
-journal = {IEEE/ACM Transactions on Computational Biology and Bioinformatics},
-keywords = {Clustering,and association rules,classification,data mining,feature extraction or construction,mining methods and algorithms},
-mendeley-groups = {Protein{\_}Drug{\_}Interaction},
-number = {2},
-pages = {308--315},
-title = {{On position-specific scoring matrix for protein function prediction}},
-volume = {8},
-year = {2011}
+@article{Krotov2018,
+abstract = {It is widely believed that end-to-end training with the backpropagation algorithm is essential for learning good feature detectors in early layers of artificial neural networks, so that these detectors are useful for the task performed by the higher layers of that neural network. At the same time, the traditional form of backpropagation is biologically implausible. In the present paper we propose an unusual learning rule, which has a degree of biological plausibility and which is motivated by Hebb's idea that change of the synapse strength should be local—i.e., should depend only on the activities of the pre- and postsynaptic neurons. We design a learning algorithm that utilizes global inhibition in the hidden layer and is capable of learning early feature detectors in a completely unsupervised way. These learned lower-layer feature detectors can be used to train higher-layer weights in a usual supervised way so that the performance of the full network is comparable to the performance of standard feedforward networks trained end-to-end with a backpropagation algorithm on simple tasks.},
+archivePrefix = {arXiv},
+arxivId = {1806.10181},
+author = {Krotov, Dmitry and Hopfield, John J.},
+doi = {10.1073/pnas.1820458116},
+eprint = {1806.10181},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Krotov, Hopfield - 2018 - Unsupervised Learning by Competing Hidden Units(2).pdf:pdf},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction/Algorithms},
+month = {apr},
+number = {16},
+pages = {7723--7731},
+title = {{Unsupervised learning by competing hidden units}},
+url = {http://arxiv.org/abs/1806.10181 http://www.pnas.org/lookup/doi/10.1073/pnas.1820458116},
+volume = {116},
+year = {2019}
 }
