completed the methodology

--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -10,7 +10,7 @@ mendeley-groups = {Protein{\_}Drug{\_}Interaction/Algorithms/Other Approaches},
 month = {aug},
 pages = {105--110},
 publisher = {Elsevier},
-title = {{Predict protein structural class for low-similarity sequences by evolutionary difference information into the general form of Chou׳s pseudo amino acid composition}},
+title = {{Predict protein structural class for low-similarity sequences by evolutionary difference information into the general form of Chou's pseudo amino acid composition}},
 url = {http://dx.doi.org/10.1016/j.jtbi.2014.04.008 https://linkinghub.elsevier.com/retrieve/pii/S0022519314002173},
 volume = {355},
 year = {2014}
