--- a/configs.tex
+++ b/configs.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%% PACKAGES
 
-\usepackage[english]{babel}  % Last language is the documents standard one.
+% \usepackage[english]{babel}  % Last language is the documents standard one.
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{listings}
@@ -14,7 +14,6 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{color}
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
-
 % \usepackage [ Bjornstrup ]{ fncychap }
 % \usepackage{nomencl} % Nomenclature
 % \makenomenclature
