--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@
 \cleardoublepage
 \setcounter{page}{1}
 \linespread{2}
-\input{frontmatter/3-dedication.tex}
+% \input{frontmatter/3-dedication.tex}
 \input{frontmatter/4-abstract.tex}
 \input{frontmatter/5-acknowledges.tex}
 
