Making final methodology look good

--- a/mainmatter/3-Methodology/methodology.tex
+++ b/mainmatter/3-Methodology/methodology.tex
@@ -4,6 +4,8 @@ Statistical Analyses to DO:
 2. Amino Acid counts (20 standards) -- For each protein sequence get total counts, sort by length -- (corresponding to one-hot)
 3. Drug Sequence Counts similar to amino acid (Logarithmic-corresponding to one-hots)
 4. 
+Things to do:
+1. System Block remake (remove calculation of KIBA Scores)
 \fi
 \chapter{Methodology}
 
