--- a/mainmatter/4-Results/results.tex
+++ b/mainmatter/4-Results/results.tex
@@ -1,7 +1,8 @@
 \chapter{Experiments and Results}
 
 
-\section{Experiment}
+\section{Experiments}
 
+The simple technique of encoding the sequence information of drugs and proteins to identify if a drug will interact or not has a major pitfall in that while drugs encoding information can be used to make drug related predictions, the protein encodings live i
 
 
