--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -26,3 +26,6 @@
 \newacronym{srv}{R2RSRV}{Residue Residue Statistical Residual Vector}
 \newacronym{lstm}{LSTM}{Long Short Term Memor}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
+\newacronym{pssmdt}{PSSM-DT}{Position Specific Scoring Matrix Distance Transformation}
+\newacronym{edt}{EDT}{Evolutionary Distance Transformation}
+\newacronym{rpt}{RPT}{Residue Probing Transformation}
