--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -1092,3 +1092,44 @@ title = {{Predicting drug-target interactions using drug-drug interactions}},
 volume = {8},
 year = {2013}
 }
+@article{Adhikari2017,
+author = {Adhikari, Badri},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Adhikari - 2017 - Resdiue-residue contact driven protein structure prediction using optimization and machine learning(2).pdf:pdf},
+keywords = {Proteins,Structure},
+mendeley-groups = {Protein Modeling/Proposal,Protein Modeling},
+number = {July},
+title = {{Resdiue-residue contact driven protein structure prediction using optimization and machine learning}},
+url = {https://mospace.umsystem.edu/xmlui/handle/10355/62281},
+year = {2017}
+}
+@inproceedings{Becker2008,
+abstract = {This paper evaluates face recognition applied to the real-world application of Facebook. Because papers usually present results in terms of accuracy on constrained face datasets, it is difficult to assess how they would work on natural data in a real-world application. We present a method to automatically gather and extract face images from Facebook, resulting in over 60,000 faces datasets, we evaluate a variety of well-known face recognition algorithms (PCA, LDA, ICA, SVMs) against holistic performance metrics of accuracy, speed, memory usage, and storage size. SVMs perform best with {\~{}}65{\%} accuracy, but lower accuracy algorithms such as IPCA are orders of magnitude more efficient in memory consumption and speed, yielding a more feasible system.},
+author = {Becker, Brian C. and Ortiz, Enrique G.},
+booktitle = {2008 8th IEEE Int. Conf. Autom. Face Gesture Recognit.},
+doi = {10.1109/AFGR.2008.4813471},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Becker, Ortiz - 2008 - Evaluation of face recognition techniques for application to facebook(2).pdf:pdf},
+isbn = {978-1-4244-2153-4},
+mendeley-groups = {Protein Modeling/Proposal,Protein Modeling},
+month = {sep},
+pages = {1--6},
+publisher = {IEEE},
+title = {{Evaluation of face recognition techniques for application to facebook}},
+url = {http://ieeexplore.ieee.org/xpl/freeabs{\_}all.jsp?arnumber=4813471{\%}5Cnhttp://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4813471 http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4813471},
+year = {2008}
+}
+@article{Finkelstein2017b,
+abstract = {The ability of protein chains to spontaneously form their spatial structures is a long-standing puzzle in molecular biology. Experimentally measured folding times of single-domain globular proteins range from microseconds to hours: the difference (10–11 orders of magnitude) is the same as that between the life span of a mosquito and the age of the universe. This review describes physical theories of rates of overcoming the free-energy barrier separating the natively folded (N) and unfolded (U) states of protein chains in both directions: “U-to-N” and “N-to-U”. In the theory of protein folding rates a special role is played by the point of thermodynamic (and kinetic) equilibrium between the native and unfolded state of the chain; here, the theory obtains the simplest form. Paradoxically, a theoretical estimate of the folding time is easier to get from consideration of protein unfolding (the “N-to-U” transition) rather than folding, because it is easier to outline a good unfolding pathway of any structure than a good folding pathway that leads to the stable fold, which is yet unknown to the folding protein chain. And since the rates of direct and reverse reactions are equal at the equilibrium point (as follows from the physical “detailed balance” principle), the estimated folding time can be derived from the estimated unfolding time. Theoretical analysis of the “N-to-U” transition outlines the range of protein folding rates in a good agreement with experiment. Theoretical analysis of folding (the “U-to-N” transition), performed at the level of formation and assembly of protein secondary structures, outlines the upper limit of protein folding times (i.e., of the time of search for the most stable fold). Both theories come to essentially the same results; this is not a surprise, because they describe overcoming one and the same free-energy barrier, although the way to the top of this barrier from the side of the unfolded state is very different from the way from the side of the native state; and both theories agree with experiment. In addition, they predict the maximal size of protein domains that fold under solely thermodynamic (rather than kinetic) control and explain the observed maximal size of the “foldable” protein domains.},
+author = {Finkelstein, Alexei V. and Badretdin, Azat J. and Galzitskaya, Oxana V. and Ivankov, Dmitry N. and Bogatyreva, Natalya S. and Garbuzynskiy, Sergiy O.},
+doi = {10.1016/j.plrev.2017.01.025},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Finkelstein et al. - 2017 - There and back again Two views on the protein folding puzzle(3).pdf:pdf},
+issn = {15710645},
+journal = {Phys. Life Rev.},
+keywords = {Folding funnel,Free-energy landscape,Levinthal's paradox,Phase separation,Protein folding,Protein secondary structure assembly},
+mendeley-groups = {FILES{\_}unmanaged,Protein Modeling/Folding},
+pages = {56--71},
+publisher = {Elsevier B.V.},
+title = {{There and back again: Two views on the protein folding puzzle}},
+url = {http://dx.doi.org/10.1016/j.plrev.2017.01.025},
+volume = {21},
+year = {2017}
+}
