--- a/mainmatter/2-Development/development.tex
+++ b/mainmatter/2-Development/development.tex
@@ -1,13 +1,16 @@
 \chapter{Theorical Background}
 
 
-\section{No Free Lunch Algorithm}
+% \section{No Free Lunch Algorithm}
 
-
-
-\section{Stacking Generalization}
 
 
 
 \section{Literature Review}
 
+Protein molecules are the workhorses of our body. For example: the blood protein hemoglobin is functional for $O_2$ /$CO_2$ transportation, antibodies defend against viruses and hormonal protein insulin regulates our blood sugar level. The protein has differences in structure, according to the desirable functional characteristics of our body. This structure is so important for our health, that understanding them can aid to cure diseases. For example, diseases like Parkinson’s is unrelated to bacteria/virus but due to incorrect folding of proteins. So, modeling of protein structures is vital to interpret disease mechanisms and design new drug treatments. Modeling of protein requires protein contact prediction after which 3D models are generated using suitable software packages like CONFOLD suite. 
+Our bodily functions are dependent on protein structure and their interdependent interactions play a vital role. Some of these proteins are of critical interest to biochemistry and biomedicine researchers.\cite{Astrand2019} For example, a protein known as amyloid beta, which forms plaques in the human brain, is a key to understanding Alzheimer's disease. Improving our understanding of correct protein structures can lead to the design of drug treatments that can target deactivation of proteins of interest. Also, the personalized treatment of any sick person by taking sample of protein structure may help design cure for specific cases (eg. due to mutation changes of protein structure), which otherwise is referred in for general case of differently related protein. Thus it will solve issues of wrong medication hazards, which are the general scenario for the developing and under-developed countries. 
+
+In the field of bioinformatics, the long-standing problem of computationally predicting the structure of a protein remains unsolved\cite{Finkelstein2017b}. The key to solving this problem is to accurately predict 'contacts', which requires measuring the physical distances between the amino acids of a folded protein. The current state-of-the-art methods like ProC\_S3 and SVMcon are about 50\% accurate \cite{Adhikari2017}.		
+
+Deep learning, which is a subfield of machine learning, has recently enabled accurate face recognition in Facebook, Google Photos etc. Google’s self driving car already uses automatic driving \cite{Becker2008}. It has also helped to accurately detect skin cancer. These demonstrated successes of deep learning algorithms clearly highlight its potential to greatly accelerate scientific problems such as protein contact prediction. 
