--- a/bibliography/__latexindent_temp.tex
+++ b/bibliography/__latexindent_temp.tex
@@ -1,19 +1,16 @@
-@article{Krotov2018,
-abstract = {It is widely believed that end-to-end training with the backpropagation algorithm is essential for learning good feature detectors in early layers of artificial neural networks, so that these detectors are useful for the task performed by the higher layers of that neural network. At the same time, the traditional form of backpropagation is biologically implausible. In the present paper we propose an unusual learning rule, which has a degree of biological plausibility and which is motivated by Hebb's idea that change of the synapse strength should be local—i.e., should depend only on the activities of the pre- and postsynaptic neurons. We design a learning algorithm that utilizes global inhibition in the hidden layer and is capable of learning early feature detectors in a completely unsupervised way. These learned lower-layer feature detectors can be used to train higher-layer weights in a usual supervised way so that the performance of the full network is comparable to the performance of standard feedforward networks trained end-to-end with a backpropagation algorithm on simple tasks.},
-archivePrefix = {arXiv},
-arxivId = {1806.10181},
-author = {Krotov, Dmitry and Hopfield, John J.},
-doi = {10.1073/pnas.1820458116},
-eprint = {1806.10181},
-file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Krotov, Hopfield - 2018 - Unsupervised Learning by Competing Hidden Units(2).pdf:pdf},
-issn = {0027-8424},
-journal = {Proceedings of the National Academy of Sciences},
-mendeley-groups = {Protein{\_}Drug{\_}Interaction/Algorithms},
-month = {apr},
-number = {16},
-pages = {7723--7731},
-title = {{Unsupervised learning by competing hidden units}},
-url = {http://arxiv.org/abs/1806.10181 http://www.pnas.org/lookup/doi/10.1073/pnas.1820458116},
-volume = {116},
-year = {2019}
+@article{Finkelstein2017b,
+abstract = {The ability of protein chains to spontaneously form their spatial structures is a long-standing puzzle in molecular biology. Experimentally measured folding times of single-domain globular proteins range from microseconds to hours: the difference (10–11 orders of magnitude) is the same as that between the life span of a mosquito and the age of the universe. This review describes physical theories of rates of overcoming the free-energy barrier separating the natively folded (N) and unfolded (U) states of protein chains in both directions: “U-to-N” and “N-to-U”. In the theory of protein folding rates a special role is played by the point of thermodynamic (and kinetic) equilibrium between the native and unfolded state of the chain; here, the theory obtains the simplest form. Paradoxically, a theoretical estimate of the folding time is easier to get from consideration of protein unfolding (the “N-to-U” transition) rather than folding, because it is easier to outline a good unfolding pathway of any structure than a good folding pathway that leads to the stable fold, which is yet unknown to the folding protein chain. And since the rates of direct and reverse reactions are equal at the equilibrium point (as follows from the physical “detailed balance” principle), the estimated folding time can be derived from the estimated unfolding time. Theoretical analysis of the “N-to-U” transition outlines the range of protein folding rates in a good agreement with experiment. Theoretical analysis of folding (the “U-to-N” transition), performed at the level of formation and assembly of protein secondary structures, outlines the upper limit of protein folding times (i.e., of the time of search for the most stable fold). Both theories come to essentially the same results; this is not a surprise, because they describe overcoming one and the same free-energy barrier, although the way to the top of this barrier from the side of the unfolded state is very different from the way from the side of the native state; and both theories agree with experiment. In addition, they predict the maximal size of protein domains that fold under solely thermodynamic (rather than kinetic) control and explain the observed maximal size of the “foldable” protein domains.},
+author = {Finkelstein, Alexei V. and Badretdin, Azat J. and Galzitskaya, Oxana V. and Ivankov, Dmitry N. and Bogatyreva, Natalya S. and Garbuzynskiy, Sergiy O.},
+doi = {10.1016/j.plrev.2017.01.025},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Finkelstein et al. - 2017 - There and back again Two views on the protein folding puzzle(3).pdf:pdf},
+issn = {15710645},
+journal = {Phys. Life Rev.},
+keywords = {Folding funnel,Free-energy landscape,Levinthal's paradox,Phase separation,Protein folding,Protein secondary structure assembly},
+mendeley-groups = {FILES{\_}unmanaged,Protein Modeling/Folding},
+pages = {56--71},
+publisher = {Elsevier B.V.},
+title = {{There and back again: Two views on the protein folding puzzle}},
+url = {http://dx.doi.org/10.1016/j.plrev.2017.01.025},
+volume = {21},
+year = {2017}
 }
